--- a/Destapa-Cañerias/Como-remover-pelos-encravados.html
+++ b/Destapa-Cañerias/Como-remover-pelos-encravados.html
@@ -143,27 +143,27 @@ Si hay ruidos o salidas anormales de agua en tu casa, esto te hace suponer que t
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Como-destapar-un-inodoro-en-casa.html">Como destapar un inodoro en casa </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-un-inodoro-sin-ventosa.html">Como destapar un inodoro sin ventosa </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Con-Que-Destapo-Cañerias-en-Palermo.html">Con Que Destapo Cañerias en Palermo </a> 
+       <a href="../Destapa-Cañerias/Destapador-de-cañerias-sodimac.html">Destapador de cañerias sodimac </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Productos-para-destapar-el-baño-walmart.html">Productos para destapar el baño walmart </a> 
+       <a href="../Destapa-Cañerias/Destapador-De-Cantilde;erias-Electrico.html">Destapador De Cañerias Electrico </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destape-De-Cañerias-en-Palermo.html">Destape De Cañerias en Palermo </a> 
+       <a href="../Servicios/Cantidad-de-inodoros-por-persona.html">Cantidad de inodoros por persona </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Maquina-para-destapar-cañerias-cuanto-cuesta.html">Maquina para destapar cañerias cuanto cuesta </a> 
+       <a href="../Servicios/Aparato-Destapa-Cañerias-en-Palermo.html">Aparato Destapa Cañerias en Palermo </a> 
          </li>
 <!--EndPostsList-->
 
@@ -226,57 +226,57 @@ Si hay ruidos o salidas anormales de agua en tu casa, esto te hace suponer que t
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Plaza-de-las-estrellas.html">Plaza de las estrellas </a> 
+       <a href="../Servicios/Para-Destrancar-Cantilde;erias.html">Para Destrancar Cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Merclin-destapa-cañerias-concentrado.html">Merclin destapa cañerias concentrado </a> 
+       <a href="../Destapa-Cañerias/Estoy-tratando-de-descubrir-como-Para-destapar-cantilde;erias-con-grasa.html">Estoy tratando de descubrir como Para destapar cañerias con grasa </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Maquina-Para-Destapaciones.html">Maquina Para Destapaciones </a> 
+       <a href="../Servicios/Maquina-Para-Destapar-Cantilde;erias-Precios.html">Maquina Para Destapar Cañerias Precios </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Con-Maquinas-Cloacas.html">Destapaciones Con Maquinas Cloacas </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Cerca-De-Mi.html">Destapaciones Cerca De Mi </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-De-Inodoros.html">Destapaciones De Inodoros </a> 
+       <a href="../Destapa-Cañerias/Estoy-buscando-consejos-sobre-Destapar-cantilde;erias-con-bicarbonato.html">Estoy buscando consejos sobre Destapar cañerias con bicarbonato </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Precios-de-destapaciones-de-inodoros.html">Precios de destapaciones de inodoros </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-De-Cañerias-Precios.html">Destapaciones De Cañerias Precios </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Tienes-alguna-idea-de-como-Destapar-cantilde;eria-con-bicarbonato-de-sodio.html">Tienes alguna idea de como Destapar cañeria con bicarbonato de sodio </a> 
+       <a href="../Servicios/La-ville-de-boulogne-sur-mer.html">La ville de boulogne sur mer </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Urgencias.html">Destapaciones Urgencias </a> 
+       <a href="../Servicios/Como-destapar-el-baño-con-bicarbonato-y-vinagre.html">Como destapar el baño con bicarbonato y vinagre </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-un-bantilde;o-dificil.html">Como destapar un baño dificil </a> 
+       <a href="../Servicios/Necesito-ayuda-con-Cantilde;eria-de-bantilde;o-tapada.html">Necesito ayuda con Cañeria de baño tapada </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Servicio-Destapa-Cañerias.html">Servicio Destapa Cañerias </a> 
+       <a href="../Destapa-Cañerias/Puedes-darme-informacion-sobre-Para-destapar-cantilde;erias.html">Puedes darme informacion sobre Para destapar cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Estoy-tratando-de-descubrir-como-Limpiar-cantilde;eria-con-bicarbonato-y-vinagre.html">Estoy tratando de descubrir como Limpiar cañeria con bicarbonato y vinagre </a> 
+       <a href="../Destapa-Cañerias/Destapar-Cañerias.html">Destapar Cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
